--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,28 @@
-#
-# Check https://circleci.com/docs/2.0/language-javascript/ for more details
-#
-version: 2
+version: 2.1
 jobs:
   build:
+    parameters:
+      db_user:
+        type: env_var_name
+        default: TEST_DB_USERNAME
+      db_password: 
+        type: env_var_name
+        default: DB_PASSWORD
+      test_db_name:
+        type: env_var_name
+        default: TEST_DB_NAME
     docker:
       # specify the version you desire here
       - image: circleci/node:11.6.0
+        environment:
+          NODE_ENV: test
 
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
+      # setup test database
+      - image: circleci/postgres:9.6.2-alpine
+        environment:
+          POSTGRES_USER: << parameters.db_user >>
+          POSTGRES_DB: cmrc_db_test
+          POSTGRES_PASSWORD: << parameters.db_password >>
 
     working_directory: ~/repo
 
@@ -33,4 +44,6 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
 
       # run tests!
-      - run: npm run ci:test
+      - run:
+          name: Run Tests
+          command: npm run ci:test
