--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build": "rm -rf dist && tsc",
     "build-dev": "npm run build && npm run start",
     "heroku-postbuild": "npm run build",
-    "test": "exit 0"
+    "test": "npm run build && cross-env NODE_ENV=test nyc -r lcov -e .ts jasmine-ts --forcExit",	
+    "ci:test": "npm run build && cross-env NODE_ENV=test jasmine-ts --forcExit"
   },
   "author": "Kingsley Frank-Demesi",
   "license": "ISC",
@@ -39,16 +40,23 @@
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
     "@types/helmet": "0.0.43",
+    "@types/jasmine": "^3.4.0",
     "@types/node": "^12.7.1",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
     "@typescript-eslint/parser": "^2.0.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "cross-env": "^5.2.0",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
     "husky": "^3.0.3",
+    "jasmine": "^3.4.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "jasmine-ts": "^0.3.0",
     "lint-staged": "^9.2.1",
     "nodemon": "^1.19.1",
+    "nyc": "^14.1.1",
     "prettier": "^1.18.2"
   },
   "husky": {
