--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "build": "rm -rf dist && tsc",
     "build-dev": "npm run build && npm run start",
     "heroku-postbuild": "npm run build",
-    "test": "npm run build && cross-env NODE_ENV=test nyc -r lcov -e .ts jasmine-ts --forcExit",	
+    "test": "npm run build && cross-env NODE_ENV=test nyc -r lcov -e .ts jasmine-ts --forcExit",
     "ci:test": "npm run build && cross-env NODE_ENV=test jasmine-ts --forcExit"
   },
   "author": "Kingsley Frank-Demesi",
   "license": "ISC",
   "dependencies": {
     "@sentry/node": "^5.6.1",
+    "@types/bcrypt": "^3.0.0",
+    "bcrypt": "^3.0.6",
+    "class-validator": "^0.10.0",
     "config": "^3.2.2",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
@@ -33,6 +36,7 @@
     "typescript": "^3.5.3"
   },
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^0.1.3",
     "@types/config": "0.0.34",
     "@types/cookie-parser": "^1.4.1",
     "@types/cors": "^2.8.5",
@@ -57,7 +61,8 @@
     "lint-staged": "^9.2.1",
     "nodemon": "^1.19.1",
     "nyc": "^14.1.1",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "source-map-support": "^0.5.13"
   },
   "husky": {
     "hooks": {
