--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cmrc",
   "version": "1.0.0",
-  "description": "",
+  "description": "An online platform for clients to contact professionals or experts for a research in the field of Communication, Media, Advertising, marketing, Public Relations and humanities",
   "main": "dist/setup/server.js",
   "engines": {
     "node": "11.6.0"
@@ -15,9 +15,17 @@
     "test": "npm run build && cross-env NODE_ENV=test nyc -r lcov -e .ts jasmine-ts --forcExit",
     "ci:test": "npm run build && cross-env NODE_ENV=test jasmine-ts --forcExit"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mrkingz/cmrc.git"
+  },
   "author": "Kingsley Frank-Demesi",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/mrkingz/cmrc/issues"
+  },
   "dependencies": {
+    "@sendgrid/mail": "^6.4.0",
     "@sentry/node": "^5.6.1",
     "@types/bcrypt": "^3.0.0",
     "bcrypt": "^3.0.6",
@@ -29,11 +37,14 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "helmet": "^3.20.0",
+    "jsonwebtoken": "^8.5.1",
+    "lodash.isempty": "^4.4.0",
+    "mailgen": "^2.0.8",
     "pg": "^7.12.1",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^8.3.0",
     "typeorm": "^0.2.18",
-    "typescript": "^3.5.3"
+    "typescript": "^3.6.3"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^0.1.3",
@@ -45,6 +56,10 @@
     "@types/express": "^4.17.0",
     "@types/helmet": "0.0.43",
     "@types/jasmine": "^3.4.0",
+    "@types/jsonwebtoken": "^8.3.3",
+    "@types/lodash": "^4.14.138",
+    "@types/lodash.isempty": "^4.4.6",
+    "@types/mailgen": "^2.0.2",
     "@types/node": "^12.7.1",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
     "@typescript-eslint/parser": "^2.0.0",
