feat (updatePassword): add update password faeture
- implement password update feature

[Finishes #168800477]

--- a/.env.example
+++ b/.env.example
@@ -16,9 +16,7 @@
 
 # JWT authentication token config
   ISSUER = Your JWT issuer
-  SUBJECT = Your JWT subject
-  SECRET = Your JWT secret key
-  EXPIRATION = Your JWT expiration time
+  JWT_SECRET = Your JWT secret key
 
 # port config
   PORT = Your preferred port
