feat (getUsers): implement get all users
- add implementation to get all users by admin

[Finishes #168943989]

--- a/.env.example
+++ b/.env.example
@@ -16,17 +16,19 @@
 
 # JWT authentication token config
   ISSUER = Your JWT issuer
-  JWT_SECRET = Your JWT secret key
+  SECRET = Your JWT secret key
+  SUBJET = Your token subject
+  EXPIRATION = Your token expiration
+
+# JWT configs
+  ISSUER = CMRC
+  JWT_SECRET = 30trg5b504rri?e$&Rr3@dx!f34crfriozaxxgnmju<weere?er5
 
 # port config
   PORT = Your preferred port
 
 # Sentry 
   SENTRY = Your sentry account for error reporting and logging
-
-# Admin e-mail
-  EMAIL = Your admin email
-  PASSWORD = Your admin email passord
 
 # Cloudinary credentials
   CLOUD_NAME = Your cloudinary credentials
@@ -38,4 +40,10 @@
   TWILIO_AUTH_TOKEN = Your Twilio authentication token
   FROM_NUMBER = Your Twilio from number
 
+# SendGrid API Key
+  SENDGRID_API_KEY = your sendgrid API key
+  FROM_EMAIL = Your registered sendgrid email
 
+# Admin credentials
+  ADMIN_PASSWORD = Your admin email passord
+  EMAIL_PASSWORD = Your admin email passord
