--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "csurf": "^1.10.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "express-paginate": "^1.0.0",
     "helmet": "^3.20.0",
     "jsonwebtoken": "^8.5.1",
     "lodash.isempty": "^4.4.0",
@@ -54,6 +55,7 @@
     "@types/csurf": "^1.9.35",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
+    "@types/express-paginate": "^1.0.0",
     "@types/helmet": "0.0.43",
     "@types/jasmine": "^3.4.0",
     "@types/jsonwebtoken": "^8.3.3",
