feat (searchUsers): search users
- implementation to search users by name with elasticsearch

[Finishes #169011680]

--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,7 @@
 # Admin credentials
   ADMIN_PASSWORD = Your admin email passord
   EMAIL_PASSWORD = Your admin email passord
+
+# Elastic search credentials
+  ELASTIC_SEARCH_USERNAME = your elastic search username
+  ELASTIC_SEARCH_PASSWORD = your elastic search password
