--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "url": "https://github.com/mrkingz/cmrc/issues"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^7.4.0",
     "@sendgrid/mail": "^6.4.0",
     "@sentry/node": "^5.6.1",
     "@types/bcrypt": "^3.0.0",
@@ -36,7 +37,6 @@
     "csurf": "^1.10.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
-    "express-paginate": "^1.0.0",
     "helmet": "^3.20.0",
     "jsonwebtoken": "^8.5.1",
     "lodash.isempty": "^4.4.0",
