feat (uploadPhoto): upload profile photo
- implemant upload/remove profile photo

[Finishes #169409265]

--- a/.env.example
+++ b/.env.example
@@ -51,3 +51,8 @@
 # Elastic search credentials
   ELASTIC_SEARCH_USERNAME = your elastic search username
   ELASTIC_SEARCH_PASSWORD = your elastic search password
+
+# Cloudinary credentials
+  CLOUD_NAME = your cloud name
+  CLOUD_API_KEY = your cloud api key
+  CLOUD_API_SECRET = your cloud api secret
