--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "build": "rm -rf dist && tsc",
     "build-dev": "npm run build && npm run start",
     "heroku-postbuild": "npm run build",
+    "typeorm:cli": "ts-node ./node_modules/typeorm/cli",
+    "migrate": "npm run typeorm:cli -- migration:run",
+    "migrate:revert": "npm run typeorm:cli -- migration:revert",
+    "db:sync": "npm run typeorm:cli -- schema:sync",
     "test": "npm run build && cross-env NODE_ENV=test nyc -r lcov -e .ts jasmine-ts --forcExit",
     "ci:test": "npm run build && cross-env NODE_ENV=test jasmine-ts --forcExit"
   },
@@ -31,6 +35,7 @@
     "@types/bcrypt": "^3.0.0",
     "bcrypt": "^3.0.6",
     "class-validator": "^0.10.0",
+    "cloudinary": "^1.16.0",
     "config": "^3.2.2",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
@@ -41,6 +46,8 @@
     "jsonwebtoken": "^8.5.1",
     "lodash.isempty": "^4.4.0",
     "mailgen": "^2.0.8",
+    "multer": "^1.4.2",
+    "multer-storage-cloudinary": "^2.2.1",
     "pg": "^7.12.1",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^8.3.0",
@@ -62,6 +69,7 @@
     "@types/lodash": "^4.14.138",
     "@types/lodash.isempty": "^4.4.6",
     "@types/mailgen": "^2.0.2",
+    "@types/multer": "^1.3.10",
     "@types/node": "^12.7.1",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
     "@typescript-eslint/parser": "^2.0.0",
