feat(orderType): implement order type
- add implementation for order type
- refactor validation mechanisim
- refactor codes to enforce seperation of concerns

[Finishes #170658716]

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,6 @@
 
 # Test database configs 
   TEST_DB_USERNAME = Your test databse user
-  TEST_DB_HOST = Your test database host
   TEST_DB_PASSWORD = Your test database password
   TEST_DB_NAME = Your test database name
 
@@ -16,12 +15,8 @@
 
 # JWT authentication token config
   ISSUER = Your JWT issuer
-  SECRET = Your JWT secret key
   SUBJET = Your token subject
   EXPIRATION = Your token expiration
-
-# JWT configs
-  ISSUER = CMRC
   JWT_SECRET = 30trg5b504rri?e$&Rr3@dx!f34crfriozaxxgnmju<weere?er5
 
 # port config
@@ -43,6 +38,9 @@
 # SendGrid API Key
   SENDGRID_API_KEY = your sendgrid API key
   FROM_EMAIL = Your registered sendgrid email
+
+# Email AbstractNotification logo url
+  NOTIFICATION_LOGO_URL=Your application online logo url
 
 # Admin credentials
   ADMIN_PASSWORD = Your admin email passord
