--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "description": "An online platform for clients to contact professionals or experts for a research in the field of Communication, Media, Advertising, marketing, Public Relations and humanities",
   "main": "dist/setup/server.js",
   "engines": {
-    "node": "11.6.0"
+    "node": "12.13.0"
   },
   "scripts": {
-    "start": "node dist/setup/server.js",
-    "start-dev": "nodemon",
+    "start": "ts-node dist/setup/server.js",
+    "start-dev": "NODE_ENV=development nodemon",
     "build": "rm -rf dist && tsc",
     "build-dev": "npm run build && npm run start",
     "heroku-postbuild": "npm run build",
-    "typeorm:cli": "ts-node ./node_modules/typeorm/cli",
+    "typeorm:cli": "ts-node ./node_modules/typeorm/cli --config ./ormconfig.js",
     "migrate": "npm run typeorm:cli -- migration:run",
     "migrate:revert": "npm run typeorm:cli -- migration:revert",
-    "db:sync": "npm run typeorm:cli -- schema:sync",
+    "seed": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed",
+    "db:sync": "npm run typeorm:cli schema:sync",
+    "db:drop": "npm run typeorm:cli schema:drop",
+    "db:refresh": "npm run db:drop && npm run db:sync",
+    "seed:refresh": "npm run db:refresh && npm run seed",
     "test": "npm run build && cross-env NODE_ENV=test nyc -r lcov -e .ts jasmine-ts --forcExit",
     "ci:test": "npm run build && cross-env NODE_ENV=test jasmine-ts --forcExit"
   },
@@ -29,65 +33,71 @@
     "url": "https://github.com/mrkingz/cmrc/issues"
   },
   "dependencies": {
-    "@elastic/elasticsearch": "^7.4.0",
-    "@sendgrid/mail": "^6.4.0",
-    "@sentry/node": "^5.6.1",
-    "@types/bcrypt": "^3.0.0",
-    "bcrypt": "^3.0.6",
-    "class-validator": "^0.10.0",
-    "cloudinary": "^1.16.0",
-    "config": "^3.2.2",
-    "cookie-parser": "^1.4.4",
-    "cors": "^2.8.5",
-    "csurf": "^1.10.0",
-    "dotenv": "^8.0.0",
-    "express": "^4.17.1",
-    "helmet": "^3.20.0",
-    "jsonwebtoken": "^8.5.1",
-    "lodash.isempty": "^4.4.0",
-    "mailgen": "^2.0.8",
-    "multer": "^1.4.2",
+    "@elastic/elasticsearch": "7.4.0",
+    "@sendgrid/mail": "6.4.0",
+    "@sentry/node": "^5.11.1",
+    "@types/bcryptjs": "2.4.2",
+    "@types/faker": "4.1.7",
+    "@types/request": "^2.48.4",
+    "@types/uuid-validate": "0.0.1",
+    "bcryptjs": "2.4.3",
+    "class-validator": "0.10.0",
+    "cloudinary": "1.16.0",
+    "cookie-parser": "1.4.4",
+    "cors": "2.8.5",
+    "dotenv": "8.0.0",
+    "express": "4.17.1",
+    "helmet": "3.21.2",
+    "jsonwebtoken": "8.5.1",
+    "lodash.camelcase": "^4.3.0",
+    "lodash.isempty": "4.4.0",
+    "lodash.isequal": "^4.5.0",
+    "lodash.pick": "^4.4.0",
+    "mailgen": "2.0.8",
+    "multer": "1.4.2",
     "multer-storage-cloudinary": "^2.2.1",
-    "pg": "^7.12.1",
-    "reflect-metadata": "^0.1.13",
-    "ts-node": "^8.3.0",
-    "typeorm": "^0.2.18",
-    "typescript": "^3.6.3"
+    "pg": "7.12.1",
+    "reflect-metadata": "0.1.13",
+    "sentry": "^0.1.2",
+    "ts-node": "8.3.0",
+    "typeorm": "^0.2.22",
+    "typeorm-seeding": "^1.2.0",
+    "typescript": "3.6.3",
+    "uuid-validate": "0.0.3"
   },
   "devDependencies": {
-    "@istanbuljs/nyc-config-typescript": "^0.1.3",
-    "@types/config": "0.0.34",
-    "@types/cookie-parser": "^1.4.1",
-    "@types/cors": "^2.8.5",
-    "@types/csurf": "^1.9.35",
-    "@types/dotenv": "^6.1.1",
-    "@types/express": "^4.17.0",
-    "@types/express-paginate": "^1.0.0",
+    "@istanbuljs/nyc-config-typescript": "0.1.3",
+    "@types/cookie-parser": "1.4.1",
+    "@types/cors": "2.8.5",
+    "@types/csurf": "1.9.35",
+    "@types/dotenv": "6.1.1",
+    "@types/express": "4.17.0",
+    "@types/express-paginate": "1.0.0",
     "@types/helmet": "0.0.43",
-    "@types/jasmine": "^3.4.0",
-    "@types/jsonwebtoken": "^8.3.3",
-    "@types/lodash": "^4.14.138",
-    "@types/lodash.isempty": "^4.4.6",
-    "@types/mailgen": "^2.0.2",
-    "@types/multer": "^1.3.10",
-    "@types/node": "^12.7.1",
-    "@typescript-eslint/eslint-plugin": "^2.0.0",
-    "@typescript-eslint/parser": "^2.0.0",
-    "chai": "^4.2.0",
-    "chai-http": "^4.3.0",
-    "cross-env": "^5.2.0",
-    "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "husky": "^3.0.3",
-    "jasmine": "^3.4.0",
-    "jasmine-spec-reporter": "^4.2.1",
-    "jasmine-ts": "^0.3.0",
-    "lint-staged": "^9.2.1",
-    "nodemon": "^1.19.1",
-    "nyc": "^14.1.1",
-    "prettier": "^1.18.2",
-    "source-map-support": "^0.5.13"
+    "@types/jasmine": "3.4.0",
+    "@types/jsonwebtoken": "8.3.3",
+    "@types/lodash": "4.14.138",
+    "@types/lodash.isempty": "4.4.6",
+    "@types/mailgen": "2.0.2",
+    "@types/multer": "1.3.10",
+    "@types/node": "12.7.1",
+    "@typescript-eslint/eslint-plugin": "2.0.0",
+    "@typescript-eslint/parser": "2.0.0",
+    "chai": "4.2.0",
+    "chai-http": "4.3.0",
+    "cross-env": "5.2.0",
+    "eslint": "6.1.0",
+    "eslint-config-prettier": "6.0.0",
+    "eslint-plugin-prettier": "3.1.0",
+    "husky": "3.0.3",
+    "jasmine": "3.4.0",
+    "jasmine-spec-reporter": "4.2.1",
+    "jasmine-ts": "0.3.0",
+    "lint-staged": "9.2.1",
+    "nodemon": "1.19.1",
+    "nyc": "14.1.1",
+    "prettier": "1.18.2",
+    "source-map-support": "0.5.13"
   },
   "husky": {
     "hooks": {
@@ -100,5 +110,18 @@
       "eslint --fix",
       "git add"
     ]
-  }
+  },
+  "eslintConfig": {
+    "env": {
+      "browser": true,
+      "node": true
+    }
+  },
+  "jshintConfig":{
+    "esversion": 6
+  },
+  "eslintIgnore": [
+    "dist",
+    "node_modules"
+  ]
 }
