feat(researchCategories): research category CRUD
- add implementations for research categories, discipline, paper type, media trend, media type and domain CRUD operations

[Finishes #170957013]

--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,7 @@ package-lock.json
 # disable random .vscode dir
 .vscode
 
-# Ignore MacOS Desktop OrderType Store
+# Ignore MacOS Desktop ResearchCategoryRepository Store
 .DS_Store
 
 .txt
