--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,3 +47,7 @@ jobs:
       - run:
           name: Run Tests
           command: npm run ci:test
+
+      - store_artifacts:
+          path: coverage
+
