--- a/.nycrc.yml
+++ b/.nycrc.yml
@@ -2,6 +2,9 @@
   "nyc": {
     "extends": "@istanbuljs/nyc-config-typescript",
     "all": true,
-    "check-coverage": true
+    "check-coverage": true,
+    "exclude": [
+      "**/**/*.spec.ts"
+    ]
   }
 }
