--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "db:drop": "npm run typeorm:cli schema:drop",
     "db:refresh": "npm run db:drop && npm run db:sync",
     "seed:refresh": "npm run db:refresh && npm run seed",
-    "test": "npm run build && cross-env NODE_ENV=test nyc -r lcov -e .ts jasmine-ts --forcExit",
+    "test": "npm run build && cross-env NODE_ENV=test nyc -r -e .ts jasmine-ts --forcExit",
     "ci:test": "npm run build && cross-env NODE_ENV=test jasmine-ts --forcExit"
   },
   "repository": {
@@ -53,6 +53,8 @@
     "lodash.isempty": "4.4.0",
     "lodash.isequal": "^4.5.0",
     "lodash.pick": "^4.4.0",
+    "lodash.startcase": "^4.4.0",
+    "lodash.upperfirst": "^4.3.1",
     "mailgen": "2.0.8",
     "multer": "1.4.2",
     "multer-storage-cloudinary": "^2.2.1",
@@ -116,9 +118,6 @@
       "browser": true,
       "node": true
     }
-  },
-  "jshintConfig":{
-    "esversion": 6
   },
   "eslintIgnore": [
     "dist",
