--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
   "dependencies": {
     "@elastic/elasticsearch": "7.4.0",
     "@sendgrid/mail": "6.4.0",
-    "@sentry/node": "^5.11.1",
+    "@sentry/node": "5.11.1",
     "@types/bcryptjs": "2.4.2",
     "@types/faker": "4.1.7",
-    "@types/request": "^2.48.4",
+    "@types/request": "2.48.4",
     "@types/uuid-validate": "0.0.1",
     "bcryptjs": "2.4.3",
     "class-validator": "0.10.0",
@@ -50,21 +50,21 @@
     "express": "4.17.1",
     "helmet": "3.21.2",
     "jsonwebtoken": "8.5.1",
-    "lodash.camelcase": "^4.3.0",
+    "lodash.camelcase": "4.3.0",
     "lodash.isempty": "4.4.0",
-    "lodash.isequal": "^4.5.0",
-    "lodash.pick": "^4.4.0",
-    "lodash.startcase": "^4.4.0",
-    "lodash.upperfirst": "^4.3.1",
+    "lodash.isequal": "4.5.0",
+    "lodash.pick": "4.4.0",
+    "lodash.startcase": "4.4.0",
+    "lodash.upperfirst": "4.3.1",
     "mailgen": "2.0.8",
     "multer": "1.4.2",
-    "multer-storage-cloudinary": "^2.2.1",
+    "multer-storage-cloudinary": "2.2.1",
     "pg": "7.12.1",
     "reflect-metadata": "0.1.13",
-    "sentry": "^0.1.2",
+    "sentry": "0.1.2",
     "ts-node": "8.3.0",
-    "typeorm": "^0.2.22",
-    "typeorm-seeding": "^1.2.0",
+    "typeorm": "0.2.22",
+    "typeorm-seeding": "1.2.0",
     "typescript": "3.6.3",
     "uuid-validate": "0.0.3"
   },
